--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -19,12 +19,26 @@
 }
 
 .tile {
-	height: 50px;
-	width: 50px;
-	border: 1px solid black;
+	border: 1.5px solid black;
 	border-radius: 5px;
 	margin: 2px;
 	background-color: #2b6cb0;
+}
+
+.tile-base {
+	height: 29px;
+	width: 29px;
+}
+
+@media (min-width: 768px) {
+	.tile-base {
+		height: 50px;
+		width: 50px;
+	}
+}
+
+.dim {
+	background-color: #4a5568;
 }
 
 .right {
