--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,4 +6,6 @@ body {
     justify-content: center;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
 }
