--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -21,7 +21,7 @@
 
 .current-row {
 	background-color: #4fd1c5;
-	border: 0.5px solid #234e52;
+	border: 1px solid #234e52;
 	border-radius: 5px;
 }
 
@@ -30,6 +30,7 @@
 	border-radius: 5px;
 	margin: 0px 2px;
 	background-color: #2b6cb0;
+	box-sizing: border-box;
 }
 
 .tile-base {
