--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,10 @@
 body {
-    background-color: #edf2f7;
-    height: 95vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 0;
-    margin: 0;
+	background-color: #edf2f7;
+	min-height: 95vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	font-family: Arial, Helvetica, sans-serif;
+	padding: 10px 0px;;
 }
